cambio de nombre (androidTest)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="campos.tres.minimo.ProyectoFinal_StudyJam.MainActivity"
+    tools:context="campos.tres.minimo.recetasdenavidadenelmundo.MainActivity"
     android:weightSum="5"
     android:orientation="vertical">
 
