--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,6 +5,6 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="campos.tres.minimo.ProyectoFinal_StudyJam.MapsActivity"
+    tools:context="campos.tres.minimo.recetasdenavidadenelmundo.MapsActivity"
 
     />
