--- a/app/src/main/res/layout/activity_mis_recetas.xml
+++ b/app/src/main/res/layout/activity_mis_recetas.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="campos.tres.minimo.ProyectoFinal_StudyJam.MisRecetas">
+    tools:context="campos.tres.minimo.recetasdenavidadenelmundo.MisRecetas">
 
     <ScrollView
         android:layout_width="match_parent"
