--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/sp"
-    tools:context="campos.tres.minimo.ProyectoFinal_StudyJam.SplashScreenActivity">
+    tools:context="campos.tres.minimo.recetasdenavidadenelmundo.SplashScreenActivity">
 
 </RelativeLayout>
